<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="jeffersonbernalcardona.barbacoa.RegisterActivity"
    android:background="@drawable/fondo">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/logo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario"
        android:gravity="center"
        android:id="@id/Usuario"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contraseña"
        android:gravity="center"
        android:id="@id/Contraseña"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contraseña1"
        android:id="@+id/Contraseña1"
        android:gravity="center"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Correo"
        android:gravity="center"
        android:id="@+id/Correo"
        android:inputType="textWebEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Registro"
        android:text="@string/Registro" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Cancelar"
        android:text="@string/Cancelar"/>

</LinearLayout>
