<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jeffersonbernalcardona.barbacoa.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo">

    <ImageView
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        android:layout_gravity="center" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Usuario"
        android:id="@+id/Usuario"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Contraseña"
        android:id="@+id/Contraseña"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Entrar"
        android:text="@string/Entrar"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Registrar"
        android:text="@string/Registro"/>


</LinearLayout>
